# celery-sample

celery_sample/: Dockerfile.server  Dockerfile.worker  README.md  docker-compose.yaml  post_script.sh
celery_sample/celery-app/: Dockerfile.server  Dockerfile.worker  pyproject.toml  server.dockerfile  server.py  tasks.py  worker.dockerfile
