[tool.poetry]
name = "celery-app"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.1.2"}
flower = "^1.0.0"
opencv-python = "^4.6.0"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
